Fixed scrolling so main scrollbar scrolls only the feed while left and right sidebars stay fixed

--- a/client/src/Components/MainSection/Feed/Feed.module.css
+++ b/client/src/Components/MainSection/Feed/Feed.module.css
@@ -1,5 +1,5 @@
 .Feed {
-  height: calc(100vh - 56px);
+  /* height: calc(100vh - 56px); */
   position: relative;
   width: 668px;
   left: 0px;
